--- a/public/patterns/00-atoms-typography-headline/00-atoms-typography-headline.rendered.html
+++ b/public/patterns/00-atoms-typography-headline/00-atoms-typography-headline.rendered.html
@@ -26,15 +26,7 @@
 
 <body class="">
 
-  <ul class="sg-colors">
-    <li>
-      <span class="sg-swatch" style="background:#001d2f"></span>
-      <span class="sg-label">
-		$color-first <br />
-		#000000
-	</span>
-    </li>
-  </ul>
+  <h1>Headline</h1>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -50,11 +42,11 @@
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
         "patternType": "atoms",
-        "patternSubtype": "colors"
+        "patternSubtype": "typography"
       },
       "patternExtension": "mustache",
-      "patternName": "Brand Colors",
-      "patternPartial": "atoms-brand-colors",
+      "patternName": "Headline",
+      "patternPartial": "atoms-headline",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
