--- a/public/patterns/00-atoms-typography/index.html
+++ b/public/patterns/00-atoms-typography/index.html
@@ -29,43 +29,6 @@
   
   <!-- Patterns -->
   <div id="sg-patterns">
-<div id="viewall-atoms-colors" class="sg-pattern-category">
-  <h2 class="sg-pattern-category-title"><a href="../../patterns/00-atoms-colors&#x2F;index.html" class="patternLink" data-patternpartial="viewall-atoms-colors">colors</a></h2>
-
-  <div class="sg-pattern-category-body">
-    
-  </div><!--end sg-pattern-category-body-->
-  
-</div><!--end sg-pattern-category-->
-<div id="atoms-brand-colors" class="sg-pattern">
-  <div class="sg-pattern-head">
-    <h3 class="sg-pattern-title">
-      <a href="../../patterns/00-atoms-colors-1-brand-colors&#x2F;00-atoms-colors-1-brand-colors.rendered.html" class="patternLink" data-patternpartial="atoms-brand-colors" title="Link to Pattern">
-          Brand Colors
-      </a>
-    </h3>
-    <div class="sg-pattern-breadcrumb"></div>
-    <a href="#" data-patternpartial="atoms-brand-colors" title="View Pattern Info" id="sg-pattern-extra-toggle-atoms-brand-colors" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
-  </div>
-  <div class="sg-pattern-extra" id="sg-pattern-extra-atoms-brand-colors">
-    
-  </div>
-  <div class="sg-pattern-example">
-    <ul class="sg-colors">
-<li>
-	<span class="sg-swatch" style="background:#001d2f"></span>
-	<span class="sg-label">
-		$color-first <br />
-		#000000
-	</span>
-</li>
-</ul>
-
-  </div>
-  <script type="text/json" id="sg-pattern-data-atoms-brand-colors" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"colors"},"patternExtension":"mustache","patternName":"Brand Colors","patternPartial":"atoms-brand-colors","patternState":"","patternEngineName":"mustache","extraOutput":{}}
-  </script>
-</div><!--end .sg-pattern-->
 <div id="viewall-atoms-typography" class="sg-pattern-category">
   <h2 class="sg-pattern-category-title"><a href="../../patterns/00-atoms-typography&#x2F;index.html" class="patternLink" data-patternpartial="viewall-atoms-typography">typography</a></h2>
 
@@ -101,7 +64,7 @@
   
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {}
+  {"patternPartial":"viewall-atoms-typography"}
 </script>
 
 <script>
