Colors type header

--- a/public/patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html
+++ b/public/patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html
@@ -26,9 +26,7 @@
 
 <body class="">
 
-  <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt
-    dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam. Fusce mollis viverra felis, in blandit orci tristique sit amet. Pellentesque ullamcorper malesuada augue, id commodo
-    velit commodo at. Aenean efficitur sem non dolor varius, eget dictum felis consectetur. Ut a condimentum justo. Nullam congue, enim eu pellentesque faucibus, ante purus mattis elit, non viverra turpis mi eu tellus. Phasellus vitae convallis nibh.</p>
+  <div class="logo">logo</div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -37,18 +35,24 @@
       "patternLineageExists": false,
       "patternLineages": [],
       "lineage": [],
-      "patternLineageRExists": false,
-      "patternLineagesR": [],
-      "lineageR": [],
-      "patternLineageEExists": false,
-      "patternDesc": "<p>Description</p>\n",
+      "patternLineageRExists": true,
+      "patternLineagesR": [{
+        "lineagePattern": "molecules-primary-nav",
+        "lineagePath": "../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"
+      }],
+      "lineageR": [{
+        "lineagePattern": "molecules-primary-nav",
+        "lineagePath": "../../patterns/01-molecules-primary-nav-primary-nav/01-molecules-primary-nav-primary-nav.rendered.html"
+      }],
+      "patternLineageEExists": true,
+      "patternDesc": "<p>Logo</p>\n",
       "patternBreadcrumb": {
         "patternType": "atoms",
-        "patternSubtype": "typography"
+        "patternSubtype": "logo"
       },
       "patternExtension": "mustache",
-      "patternName": "Paragraph",
-      "patternPartial": "atoms-paragraph",
+      "patternName": "Logo",
+      "patternPartial": "atoms-logo",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
