--- a/public/patterns/01-molecules-card-card/01-molecules-card-card.rendered.html
+++ b/public/patterns/01-molecules-card-card/01-molecules-card-card.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1493689584578" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1493689584578" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1494200309508" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494200309508" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1493689584578" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1493689584578" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494200309508" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494200309508" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -26,8 +26,9 @@
 
 <body class="">
 
-  <div class="primary-nav">
-    Here's my primary nav to export.
+  <div class="card">
+    <div class="card-top"></div>
+    <div class="card-bottom"></div>
   </div>
 
   <!--DO NOT REMOVE-->
@@ -43,11 +44,12 @@
       "patternLineageEExists": false,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "molecules"
+        "patternType": "molecules",
+        "patternSubtype": "card"
       },
       "patternExtension": "mustache",
-      "patternName": "Primary Nav",
-      "patternPartial": "molecules-primary-nav",
+      "patternName": "Card",
+      "patternPartial": "molecules-card",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -87,10 +89,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1493689584578">
+  <script id="pl-js-polyfill-insert-1494200309508">
     (function() {
       if (self != top) {
-        var cb = '1493689584578';
+        var cb = '1494200309508';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -100,10 +102,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1493689584578">
+  <script id="pl-js-insert-1494200309508">
     (function() {
       if (self != top) {
-        var cb = '1493689584578';
+        var cb = '1494200309508';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
