--- a/public/patterns/01-molecules-primary-nav/index.html
+++ b/public/patterns/01-molecules-primary-nav/index.html
@@ -29,83 +29,44 @@
   
   <!-- Patterns -->
   <div id="sg-patterns">
-<div id="viewall-atoms-colors" class="sg-pattern-category">
-  <h2 class="sg-pattern-category-title"><a href="../../patterns/00-atoms-colors&#x2F;index.html" class="patternLink" data-patternpartial="viewall-atoms-colors">colors</a></h2>
+<div id="viewall-molecules-primary-nav" class="sg-pattern-category">
+  <h2 class="sg-pattern-category-title"><a href="../../patterns/01-molecules-primary-nav&#x2F;index.html" class="patternLink" data-patternpartial="viewall-molecules-primary-nav">primary-nav</a></h2>
 
   <div class="sg-pattern-category-body">
     
   </div><!--end sg-pattern-category-body-->
   
 </div><!--end sg-pattern-category-->
-<div id="atoms-brand-colors" class="sg-pattern">
+<div id="molecules-primary-nav" class="sg-pattern">
   <div class="sg-pattern-head">
     <h3 class="sg-pattern-title">
-      <a href="../../patterns/00-atoms-colors-1-brand-colors&#x2F;00-atoms-colors-1-brand-colors.rendered.html" class="patternLink" data-patternpartial="atoms-brand-colors" title="Link to Pattern">
-          Brand Colors
+      <a href="../../patterns/01-molecules-primary-nav-primary-nav&#x2F;01-molecules-primary-nav-primary-nav.rendered.html" class="patternLink" data-patternpartial="molecules-primary-nav" title="Link to Pattern">
+          Primary Nav
       </a>
     </h3>
     <div class="sg-pattern-breadcrumb"></div>
-    <a href="#" data-patternpartial="atoms-brand-colors" title="View Pattern Info" id="sg-pattern-extra-toggle-atoms-brand-colors" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+    <a href="#" data-patternpartial="molecules-primary-nav" title="View Pattern Info" id="sg-pattern-extra-toggle-molecules-primary-nav" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
   </div>
-  <div class="sg-pattern-extra" id="sg-pattern-extra-atoms-brand-colors">
+  <div class="sg-pattern-extra" id="sg-pattern-extra-molecules-primary-nav">
     
   </div>
   <div class="sg-pattern-example">
-    <ul class="sg-colors">
-<li>
-	<span class="sg-swatch" style="background:#262d3f"></span>
-	<span class="sg-label">
-		$color-dark <br />
-		#262d3f
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#153659"></span>
-	<span class="sg-label">
-		$color-medium <br />
-		#153659
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#d3d0cd"></span>
-	<span class="sg-label">
-		$color-light <br />
-		#d3d0cd
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#968d81"></span>
-	<span class="sg-label">
-		$color-neutral <br />
-		#968d81
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#ea6922"></span>
-	<span class="sg-label">
-		$color-warm <br />
-		#ea6922
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#e84950"></span>
-	<span class="sg-label">
-		$color-hot <br />
-		#e84950
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#ffffff"></span>
-	<span class="sg-label">
-		$color-white <br />
-		#ffffff
-	</span>
-</li>
-</ul>
+    <div class="primary-nav">
+  <div class="primary-nav-third">
+    Work
+  </div>
+  <div class="primary-nav-third">
+    <div class="logo">logo</div>
 
   </div>
-  <script type="text/json" id="sg-pattern-data-atoms-brand-colors" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Brand Colors</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"colors"},"patternExtension":"mustache","patternName":"Brand Colors","patternPartial":"atoms-brand-colors","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+  <div class="primary-nav-third">
+    Info
+  </div>
+</div>
+
+  </div>
+  <script type="text/json" id="sg-pattern-data-molecules-primary-nav" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"lineage":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"molecules","patternSubtype":"primary-nav"},"patternExtension":"mustache","patternName":"Primary Nav","patternPartial":"molecules-primary-nav","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -114,7 +75,7 @@
   
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-atoms-colors"}
+  {"patternPartial":"viewall-molecules-primary-nav"}
 </script>
 
 <script>
