Links header footer home template

--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
@@ -1,11 +1,14 @@
 <div class="primary-nav">
   <div class="primary-nav-third">
-    Work
+    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
   </div>
   <div class="primary-nav-third">
-    {{> atoms-logo }}
+    <div class="logo">logo</div>
+
   </div>
   <div class="primary-nav-third">
-    Info
+    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
   </div>
 </div>
