--- a/public/patterns/00-atoms-typography/index.html
+++ b/public/patterns/00-atoms-typography/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1494298367390" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494298367390" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1494467031404" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494467031404" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494298367390" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494298367390" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494467031404" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494467031404" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -55,7 +55,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-atoms-headline" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Headline","patternPartial":"atoms-headline","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"organisms-header","lineagePath":"../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"}],"lineageR":[{"lineagePattern":"organisms-header","lineagePath":"../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"typography"},"patternExtension":"mustache","patternName":"Headline","patternPartial":"atoms-headline","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="atoms-paragraph" class="sg-pattern">
@@ -121,10 +121,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1494298367390">
+<script id="pl-js-polyfill-insert-1494467031404">
   (function() {
     if (self != top) {
-      var cb = '1494298367390';
+      var cb = '1494467031404';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -134,10 +134,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1494298367390">
+<script id="pl-js-insert-1494467031404">
   (function() {
     if (self != top) {
-      var cb = '1494298367390';
+      var cb = '1494467031404';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
