--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1494298367390" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494298367390" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1494467031404" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494467031404" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494298367390" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494298367390" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494467031404" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494467031404" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -28,14 +28,16 @@
 
   <div class="primary-nav">
     <div class="primary-nav-third">
-      Work
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
     </div>
     <div class="primary-nav-third">
       <div class="logo">logo</div>
 
     </div>
     <div class="primary-nav-third">
-      Info
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
     </div>
   </div>
 
@@ -45,25 +47,37 @@
       "cssEnabled": false,
       "patternLineageExists": true,
       "patternLineages": [{
+        "lineagePattern": "atoms-primary-nav-link",
+        "lineagePath": "../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"
+      }, {
         "lineagePattern": "atoms-logo",
         "lineagePath": "../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"
       }],
       "lineage": [{
+        "lineagePattern": "atoms-primary-nav-link",
+        "lineagePath": "../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"
+      }, {
         "lineagePattern": "atoms-logo",
         "lineagePath": "../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"
       }],
-      "patternLineageRExists": false,
-      "patternLineagesR": [],
-      "lineageR": [],
+      "patternLineageRExists": true,
+      "patternLineagesR": [{
+        "lineagePattern": "templates-homepage",
+        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+      }],
+      "lineageR": [{
+        "lineagePattern": "templates-homepage",
+        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+      }],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "molecules",
+        "patternType": "organisms",
         "patternSubtype": "primary-nav"
       },
       "patternExtension": "mustache",
       "patternName": "Primary Nav",
-      "patternPartial": "molecules-primary-nav",
+      "patternPartial": "organisms-primary-nav",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -103,10 +117,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1494298367390">
+  <script id="pl-js-polyfill-insert-1494467031404">
     (function() {
       if (self != top) {
-        var cb = '1494298367390';
+        var cb = '1494467031404';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -116,10 +130,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1494298367390">
+  <script id="pl-js-insert-1494467031404">
     (function() {
       if (self != top) {
-        var cb = '1494298367390';
+        var cb = '1494467031404';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
