--- a/public/patterns/02-organisms-comps/index.html
+++ b/public/patterns/02-organisms-comps/index.html
@@ -29,33 +29,41 @@
   
   <!-- Patterns -->
   <div id="sg-patterns">
-<div id="viewall-atoms-logo" class="sg-pattern-category">
-  <h2 class="sg-pattern-category-title"><a href="../../patterns/00-atoms-logo&#x2F;index.html" class="patternLink" data-patternpartial="viewall-atoms-logo">logo</a></h2>
+<div id="viewall-organisms-comps" class="sg-pattern-category">
+  <h2 class="sg-pattern-category-title"><a href="../../patterns/02-organisms-comps&#x2F;index.html" class="patternLink" data-patternpartial="viewall-organisms-comps">comps</a></h2>
 
   <div class="sg-pattern-category-body">
     
   </div><!--end sg-pattern-category-body-->
   
 </div><!--end sg-pattern-category-->
-<div id="atoms-logo" class="sg-pattern">
+<div id="organisms-comp01" class="sg-pattern">
   <div class="sg-pattern-head">
     <h3 class="sg-pattern-title">
-      <a href="../../patterns/00-atoms-logo-logo&#x2F;00-atoms-logo-logo.rendered.html" class="patternLink" data-patternpartial="atoms-logo" title="Link to Pattern">
-          Logo
+      <a href="../../patterns/02-organisms-comps-comp01&#x2F;02-organisms-comps-comp01.rendered.html" class="patternLink" data-patternpartial="organisms-comp01" title="Link to Pattern">
+          Comp01
       </a>
     </h3>
     <div class="sg-pattern-breadcrumb"></div>
-    <a href="#" data-patternpartial="atoms-logo" title="View Pattern Info" id="sg-pattern-extra-toggle-atoms-logo" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+    <a href="#" data-patternpartial="organisms-comp01" title="View Pattern Info" id="sg-pattern-extra-toggle-organisms-comp01" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
   </div>
-  <div class="sg-pattern-extra" id="sg-pattern-extra-atoms-logo">
+  <div class="sg-pattern-extra" id="sg-pattern-extra-organisms-comp01">
     
   </div>
   <div class="sg-pattern-example">
-    <div class="logo">logo</div>
+    <div class="comp01-top">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+</div>
+
+<div class="comp01-bottom">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+</div>
 
   </div>
-  <script type="text/json" id="sg-pattern-data-atoms-logo" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"organisms-primary-nav","lineagePath":"../../patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html"}],"lineageR":[{"lineagePattern":"organisms-primary-nav","lineagePath":"../../patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Logo</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"logo"},"patternExtension":"mustache","patternName":"Logo","patternPartial":"atoms-logo","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+  <script type="text/json" id="sg-pattern-data-organisms-comp01" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"lineageR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"comps"},"patternExtension":"mustache","patternName":"Comp01","patternPartial":"organisms-comp01","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -64,7 +72,7 @@
   
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-atoms-logo"}
+  {"patternPartial":"viewall-organisms-comps"}
 </script>
 
 <script>
