--- a/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.markup-only.html
+++ b/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.markup-only.html
@@ -18,6 +18,16 @@
 
 </div>
 
+<div class="comp01-top">
+  <div class="comp01-left"></div>
+  <div class="comp01-right"></div>
+</div>
+
+<div class="comp01-bottom">
+  <div class="comp01-left"></div>
+  <div class="comp01-right"></div>
+</div>
+
 <div class="footer">
   <a href="#" class="footer-nav-link">Footer Nav Link</a>
 
