--- a/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html
+++ b/public/patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1494467031404" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494467031404" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1494810145804" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494810145804" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494467031404" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494467031404" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494810145804" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494810145804" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -46,6 +46,16 @@
 
   </div>
 
+  <div class="comp01-top">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+  </div>
+
+  <div class="comp01-bottom">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+  </div>
+
   <div class="footer">
     <a href="#" class="footer-nav-link">Footer Nav Link</a>
 
@@ -64,6 +74,9 @@
         "lineagePattern": "organisms-header",
         "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
       }, {
+        "lineagePattern": "organisms-comp01",
+        "lineagePath": "../../patterns/02-organisms-comps-comp01/02-organisms-comps-comp01.rendered.html"
+      }, {
         "lineagePattern": "organisms-footer",
         "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
@@ -74,12 +87,21 @@
         "lineagePattern": "organisms-header",
         "lineagePath": "../../patterns/02-organisms-header-header/02-organisms-header-header.rendered.html"
       }, {
+        "lineagePattern": "organisms-comp01",
+        "lineagePath": "../../patterns/02-organisms-comps-comp01/02-organisms-comps-comp01.rendered.html"
+      }, {
         "lineagePattern": "organisms-footer",
         "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
-      "patternLineageRExists": false,
-      "patternLineagesR": [],
-      "lineageR": [],
+      "patternLineageRExists": true,
+      "patternLineagesR": [{
+        "lineagePattern": "pages-homepage",
+        "lineagePath": "../../patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.rendered.html"
+      }],
+      "lineageR": [{
+        "lineagePattern": "pages-homepage",
+        "lineagePath": "../../patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.rendered.html"
+      }],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
@@ -128,10 +150,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1494467031404">
+  <script id="pl-js-polyfill-insert-1494810145804">
     (function() {
       if (self != top) {
-        var cb = '1494467031404';
+        var cb = '1494810145804';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -141,10 +163,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1494467031404">
+  <script id="pl-js-insert-1494810145804">
     (function() {
       if (self != top) {
-        var cb = '1494467031404';
+        var cb = '1494810145804';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
