--- a/public/patterns/04-pages/index.html
+++ b/public/patterns/04-pages/index.html
@@ -29,33 +29,70 @@
   
   <!-- Patterns -->
   <div id="sg-patterns">
-<div id="viewall-atoms-logo" class="sg-pattern-category">
-  <h2 class="sg-pattern-category-title"><a href="../../patterns/00-atoms-logo&#x2F;index.html" class="patternLink" data-patternpartial="viewall-atoms-logo">logo</a></h2>
+<div id="viewall-pages-homepage" class="sg-pattern-category">
+  <h2 class="sg-pattern-category-title"><a href="../../patterns/04-pages-homepage&#x2F;index.html" class="patternLink" data-patternpartial="viewall-pages-homepage">homepage</a></h2>
 
   <div class="sg-pattern-category-body">
     
   </div><!--end sg-pattern-category-body-->
   
 </div><!--end sg-pattern-category-->
-<div id="atoms-logo" class="sg-pattern">
+<div id="pages-homepage" class="sg-pattern">
   <div class="sg-pattern-head">
     <h3 class="sg-pattern-title">
-      <a href="../../patterns/00-atoms-logo-logo&#x2F;00-atoms-logo-logo.rendered.html" class="patternLink" data-patternpartial="atoms-logo" title="Link to Pattern">
-          Logo
+      <a href="../../patterns/04-pages-homepage-homepage&#x2F;04-pages-homepage-homepage.rendered.html" class="patternLink" data-patternpartial="pages-homepage" title="Link to Pattern">
+          Homepage
       </a>
     </h3>
     <div class="sg-pattern-breadcrumb"></div>
-    <a href="#" data-patternpartial="atoms-logo" title="View Pattern Info" id="sg-pattern-extra-toggle-atoms-logo" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+    <a href="#" data-patternpartial="pages-homepage" title="View Pattern Info" id="sg-pattern-extra-toggle-pages-homepage" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
   </div>
-  <div class="sg-pattern-extra" id="sg-pattern-extra-atoms-logo">
+  <div class="sg-pattern-extra" id="sg-pattern-extra-pages-homepage">
     
   </div>
   <div class="sg-pattern-example">
+    <div class="gs">
+<div class="primary-nav">
+  <div class="primary-nav-third">
+    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
+  </div>
+  <div class="primary-nav-third">
     <div class="logo">logo</div>
 
   </div>
-  <script type="text/json" id="sg-pattern-data-atoms-logo" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"organisms-primary-nav","lineagePath":"../../patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html"}],"lineageR":[{"lineagePattern":"organisms-primary-nav","lineagePath":"../../patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Logo</p>\n","patternBreadcrumb":{"patternType":"atoms","patternSubtype":"logo"},"patternExtension":"mustache","patternName":"Logo","patternPartial":"atoms-logo","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+  <div class="primary-nav-third">
+    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
+  </div>
+</div>
+
+<div class="header">
+    <h1>The Accidental Getaway Driver</h1>
+
+</div>
+
+<div class="comp01-top">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+</div>
+
+<div class="comp01-bottom">
+    <div class="comp01-left"></div>
+    <div class="comp01-right"></div>
+</div>
+
+<div class="footer">
+    <a href="#" class="footer-nav-link">Footer Nav Link</a>
+
+</div>
+
+
+</div>
+
+  </div>
+  <script type="text/json" id="sg-pattern-data-pages-homepage" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"lineage":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"pages","patternSubtype":"homepage"},"patternExtension":"mustache","patternName":"Homepage","patternPartial":"pages-homepage","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -64,7 +101,7 @@
   
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
-  {"patternPartial":"viewall-atoms-logo"}
+  {"patternPartial":"viewall-pages-all"}
 </script>
 
 <script>
