--- a/public/patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.rendered.html
+++ b/public/patterns/04-pages-homepage-homepage/04-pages-homepage-homepage.rendered.html
@@ -26,27 +26,70 @@
 
 <body class="">
 
-  <button>Button</button>
+  <div class="gs">
+    <div class="primary-nav">
+      <div class="primary-nav-third">
+        <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
+      </div>
+      <div class="primary-nav-third">
+        <div class="logo">logo</div>
+
+      </div>
+      <div class="primary-nav-third">
+        <a href="#" class="primary-nav-link">Primary Nav Link</a>
+
+      </div>
+    </div>
+
+    <div class="header">
+      <h1>The Accidental Getaway Driver</h1>
+
+    </div>
+
+    <div class="comp01-top">
+      <div class="comp01-left"></div>
+      <div class="comp01-right"></div>
+    </div>
+
+    <div class="comp01-bottom">
+      <div class="comp01-left"></div>
+      <div class="comp01-right"></div>
+    </div>
+
+    <div class="footer">
+      <a href="#" class="footer-nav-link">Footer Nav Link</a>
+
+    </div>
+
+
+  </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
     {
       "cssEnabled": false,
-      "patternLineageExists": false,
-      "patternLineages": [],
-      "lineage": [],
+      "patternLineageExists": true,
+      "patternLineages": [{
+        "lineagePattern": "templates-homepage",
+        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+      }],
+      "lineage": [{
+        "lineagePattern": "templates-homepage",
+        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+      }],
       "patternLineageRExists": false,
       "patternLineagesR": [],
       "lineageR": [],
-      "patternLineageEExists": false,
-      "patternDesc": "<p>Buttons</p>\n",
+      "patternLineageEExists": true,
+      "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "atoms",
-        "patternSubtype": "buttons"
+        "patternType": "pages",
+        "patternSubtype": "homepage"
       },
       "patternExtension": "mustache",
-      "patternName": "Buttons",
-      "patternPartial": "atoms-buttons",
+      "patternName": "Homepage",
+      "patternPartial": "pages-homepage",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
