Header and footer

--- a/public/patterns/00-atoms-typography-small-caps/00-atoms-typography-small-caps.rendered.html
+++ b/public/patterns/00-atoms-typography-small-caps/00-atoms-typography-small-caps.rendered.html
@@ -26,15 +26,7 @@
 
 <body class="">
 
-  <div class="comp01-top">
-    <div class="comp01-left"></div>
-    <div class="comp01-right"></div>
-  </div>
-
-  <div class="comp01-bottom">
-    <div class="comp01-left"></div>
-    <div class="comp01-right"></div>
-  </div>
+  <div class="small-caps">Integer eget mollis</div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -45,22 +37,22 @@
       "lineage": [],
       "patternLineageRExists": true,
       "patternLineagesR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-footer",
+        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
       "lineageR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
+        "lineagePattern": "organisms-footer",
+        "lineagePath": "../../patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html"
       }],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "organisms",
-        "patternSubtype": "comps"
+        "patternType": "atoms",
+        "patternSubtype": "typography"
       },
       "patternExtension": "mustache",
-      "patternName": "Comp01",
-      "patternPartial": "organisms-comp01",
+      "patternName": "Small Caps",
+      "patternPartial": "atoms-small-caps",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
