--- a/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
+++ b/public/patterns/02-organisms-primary-nav-primary-nav/02-organisms-primary-nav-primary-nav.markup-only.html
@@ -1,14 +1,16 @@
 <div class="primary-nav">
-  <div class="primary-nav-third">
-    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+  <div class="primary-nav-inside">
+    <div class="primary-nav-third">
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
 
-  </div>
-  <div class="primary-nav-third">
-    <div class="logo">logo</div>
+    </div>
+    <div class="primary-nav-third">
+      <div class="logo"><img src="../../images/logolight.svg"></div>
 
-  </div>
-  <div class="primary-nav-third">
-    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+    </div>
+    <div class="primary-nav-third">
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
 
+    </div>
   </div>
 </div>
