--- a/public/patterns/02-organisms/index.html
+++ b/public/patterns/02-organisms/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1494810145804" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1494810145804" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1496202744674" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1496202744674" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1494810145804" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1494810145804" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1496202744674" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1496202744674" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -89,13 +89,35 @@
   </div>
   <div class="sg-pattern-example">
     <div class="footer">
-    <a href="#" class="footer-nav-link">Footer Nav Link</a>
+  <div class="footer-inside">
+    <div class="footer-third">
+      <div class="logo"><img src="../../images/logolight.svg"></div>
 
+      <div class="footer-link"><a href="#">Footer Link</a></div>
+
+      <div class="footer-link"><a href="#">Footer Link</a></div>
+
+    </div>
+    <div class="footer-third">
+      <div class="small-caps">Integer eget mollis</div>
+
+      <p>Integer eget mollis ipsum. Donec vehicula eleifend viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam tincidunt odio et augue porta ultrices. Mauris pulvinar tellus pulvinar viverra dapibus. Cras ut tortor enim. Mauris tincidunt dui ac massa tincidunt ultrices. Nam viverra bibendum finibus. Donec gravida enim sem. Suspendisse sodales posuere sapien eget aliquam. Fusce mollis viverra felis, in blandit orci tristique sit amet. Pellentesque ullamcorper malesuada augue, id commodo velit commodo at. Aenean efficitur sem non dolor varius, eget dictum felis consectetur. Ut a condimentum justo. Nullam congue, enim eu pellentesque faucibus, ante purus mattis elit, non viverra turpis mi eu tellus. Phasellus vitae convallis nibh.</p>
+
+    </div>
+    <div class="footer-third">
+    </div>
+    <div class="footer-link"><a href="#">Footer Link</a></div>
+
+    <div class="footer-link"><a href="#">Footer Link</a></div>
+
+    <div class="footer-link"><a href="#">Footer Link</a></div>
+
+  </div>
 </div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-organisms-footer" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"}],"lineage":[{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"lineageR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"footer"},"patternExtension":"mustache","patternName":"Footer","patternPartial":"organisms-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"},{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"},{"lineagePattern":"atoms-small-caps","lineagePath":"../../patterns/00-atoms-typography-small-caps/00-atoms-typography-small-caps.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"}],"lineage":[{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"},{"lineagePattern":"atoms-footer-nav-link","lineagePath":"../../patterns/00-atoms-links-footer-nav-link/00-atoms-links-footer-nav-link.rendered.html"},{"lineagePattern":"atoms-small-caps","lineagePath":"../../patterns/00-atoms-typography-small-caps/00-atoms-typography-small-caps.rendered.html"},{"lineagePattern":"atoms-paragraph","lineagePath":"../../patterns/00-atoms-typography-paragraph/00-atoms-typography-paragraph.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"lineageR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"footer"},"patternExtension":"mustache","patternName":"Footer","patternPartial":"organisms-footer","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-organisms-header" class="sg-pattern-category">
@@ -153,17 +175,19 @@
   </div>
   <div class="sg-pattern-example">
     <div class="primary-nav">
-  <div class="primary-nav-third">
-    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+  <div class="primary-nav-inside">
+    <div class="primary-nav-third">
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
 
-  </div>
-  <div class="primary-nav-third">
-    <div class="logo">logo</div>
+    </div>
+    <div class="primary-nav-third">
+      <div class="logo"><img src="../../images/logolight.svg"></div>
 
-  </div>
-  <div class="primary-nav-third">
-    <a href="#" class="primary-nav-link">Primary Nav Link</a>
+    </div>
+    <div class="primary-nav-third">
+      <a href="#" class="primary-nav-link">Primary Nav Link</a>
 
+    </div>
   </div>
 </div>
 
@@ -214,10 +238,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1494810145804">
+<script id="pl-js-polyfill-insert-1496202744674">
   (function() {
     if (self != top) {
-      var cb = '1494810145804';
+      var cb = '1496202744674';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -227,10 +251,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1494810145804">
+<script id="pl-js-insert-1496202744674">
   (function() {
     if (self != top) {
-      var cb = '1494810145804';
+      var cb = '1496202744674';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
